# fds-ai-workflow-audit

./: .gitignore  README.md  pyproject.toml  run_audit.py  workflow.example.yml
docs/: FAILURE_TAXONOMY.md  METHODOLOGY.md  RISK_DIMENSIONS.md  init-spec.md
engine/: __init__.py  checkpoint_recommender.py  claude_enricher.py  cost_calculator.py  failure_mapper.py  parser.py  risk_scorer.py
evals/: EVAL_REPORT.md  eval_runner.py
evals/results/cascading_chain/: audit_results.json  checkpoints.csv  cost_breakdown.csv  cost_optimizations.csv  executive_summary.csv  failure_matrix.csv  growth_projections.csv  risk_scores.csv  workflow_steps.csv
evals/results/ceo_agent/: audit_results.json  checkpoints.csv  cost_breakdown.csv  cost_optimizations.csv  executive_summary.csv  failure_matrix.csv  growth_projections.csv  (+2 more)
evals/workflows/: cascading_chain.yml  ceo_agent.yml  customer_support_agent.yml  expense_processor.yml  frequency_bomb.yml  gtm_plg_engine.yml  hidden_write.yml  internal_qa_bot.yml
evidence/: .gitignore
evidence/pages/: cost-analysis.md  failures.md  human-checkpoints.md  index.md  recommendations.md  workflow-map.md
examples/: content_generation_pipeline.yml  customer_support_agent.yml  data_enrichment_system.yml  internal_knowledge_qa.yml  sales_outreach_agent.yml
models/: infra_pricing.yml  model_pricing.yml
tests/: test_checkpoint_recommender.py  test_claude_enricher.py  test_cost_calculator.py  test_examples.py  test_failure_mapper.py  test_parser.py  test_risk_scorer.py  test_run_audit.py
workflows/: ceo_agent.yml  gtm_plg_engine.yml
(+49 files in other folders)
