[project]
name = "fds-ai-workflow-audit"
version = "0.1.0"
description = "Config-driven AI workflow risk and quality assessment tool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
